public class Enemy extends Combatant {
    public Enemy(String name, int health, int attackPower) {
        super(name, health, attackPower);
    }

}
