public class Player extends Combatant {
    public Player(String name, int health, int attackPower) {
        super(name, health, attackPower);
    }

}
